--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -46,7 +46,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | [[Blue System]]
 | {{GER}}
 | 1987—1998
-| «[[My Bed is Too Big]]» (1988), «Love Me on the Rocks» (1989)
+| «[[My Bed is Too Big]]» (1988), «Love Me on the Rocks» (1989), «Nobody Makes Me Crazy (Like You Do)» (1989)
 |-
 | [[Bonni Tailer]]
 | {{GBR}}
@@ -83,7 +83,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 |-
 | [[Danuta Lato]]
 | {{POL}}
-| 1983/1987—1989/1997
+| ''1983/''1987—1989''/1997''
 | «Touch My Heart» (1987)
 |-
 | [[Dead or Alive (grupp)|Dead or Alive]]
@@ -218,6 +218,30 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | {{ITA}}
 | 1982—1993, 2001—...
 | «[[Visitors]]» (1985)
+|-
+|}
+
+== L ==
+{| class="sortable wikitable"
+! Edestai
+! Valdkund
+! Voded
+! Kaikiš tetabižiš pajod
+|-
+| [[Laserdance]]
+| {{NLD}}
+| 1984—1995, 2000
+| «PowerRun» (1987)
+|-
+| [[Ricco Linda Džo|Linda Džo Ricco]]
+| {{ITA}}<br />{{GER}}
+| 1985—...
+| «You're My First, You're My Last» (1986)
+|-
+| [[Lian Ross]]
+| {{GER}}
+| 1985—...
+| «Say You'll Never» (1985), «Fantasy» (1985), «Cratch My Name» (1985, Creative Connection-psevdoniman al), «It's Up to You» (1986)
 |-
 |}
 
