--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -241,7 +241,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | [[Lian Ross]]
 | {{GER}}
 | 1985—...
-| «Say You'll Never» (1985), «Fantasy» (1985), «Cratch My Name» (1985, Creative Connection-psevdoniman al), «It's Up to You» (1986)
+| «Say You'll Never» (1985), «Fantasy» (1985), «Cratch My Name» (1985, ''Creative Connection''-psevdoniman al), «It's Up to You» (1986)
 |-
 |}
 
