--- a/Gaudi_Antonio.mw
+++ b/Gaudi_Antonio.mw
@@ -1,7 +1,7 @@
 [[Fail:El Capricho JPG.jpg|thumb|left|250px|[[El'-Kapriččo]] (1885)]]
 [[Fail:Antoni gaudi.jpg|thumb|right|250px|Antonio Gaudi]]
 [[Fail:Firma Gaudí.jpg|right|250px]]
-'''Antoni(o) Plasid Gil'jem Gaudi-i-Kurnet''' ([[ispanijan kel'|isp.]]: ''Antonio Plácido Guillermo Gaudí y Cornet'', [[katalanan kel'|katal.]]: ''Antoni Plàcid Guillem Gaudí i Cornet''; sünd. [[25. kezaku]] [[1852]], [[Reus]], [[Katalonii]], [[Ispanii]] — kol. [[10. kezaku]] [[1926]], [[Barselon]], [[Katalonii]], [[Ispanii]]) oli ispanijalaine (katalonijalaine) arhitektor. Järgeližetomiž-fantastižiden arhitekturradoiden tegii, äilugu niišpäi sijadas [[Barselon]]as.
+'''Antoni(o) Plasid Gil'jem Gaudi-i-Kurnet''' ([[ispanijan kel'|isp.]]: ''Antonio Plácido Guillermo Gaudí y Cornet'', [[katalanan kel'|katal.]]: ''Antoni Plàcid Guillem Gaudí i Cornet''; sünd. [[25. kezaku]] [[1852]], [[Reus]], [[Katalonii]], [[Ispanii]] — kol. [[10. kezaku]] [[1926]], [[Barselon]], [[Katalonii]], [[Ispanii]]) oli ispanijalaine (katalonijalaine) arhitektor. Järgeližetomiž-fantastižiden arhitekturradoiden tegii, äilugu niišpäi sijadase [[Barselon]]as.
 {{stub}}
 
 [[Kategorii:Arhitektorad]]
