*Empty MediaWiki Message*

--- a/Podporožj.mw
+++ b/Podporožj.mw
@@ -1,4 +1,4 @@
-'''Kos'kenaluine''' (ven.: ''Подпорожье'') om [[lidn]] [[Leningradan agj]]as [[Podporožjen rajon]]as.
+'''Kos'kenaluine (Podporožje)''' (ven.: ''Подпорожье'') om [[lidn]] [[Leningradan agj]]as [[Podporožjen rajon]]as.
 
 == Istorii ==
 
