*Empty MediaWiki Message*

--- a/Kos'kenaluižen_rajon.mw
+++ b/Kos'kenaluižen_rajon.mw
@@ -12,7 +12,7 @@
 | Map           = Ru-len-podporozhsky loc.svg
 | Map width     = 
 }}
-'''Kos'kenaluižen rajon''' (ven.: ''Подпорожский район'') om [[rajon]] [[Leningradan agj]]as.
+'''Kos'kenaluižen (Podporožjen) rajon''' (ven.: ''Подпорожский район'') om [[rajon]] [[Leningradan agj]]as.
 
 == Istorii ==
 
