*Empty MediaWiki Message*

--- a/Süvärensu.mw
+++ b/Süvärensu.mw
@@ -15,7 +15,7 @@
 }}
 '''Süvärensu''' ([[venäkel'|ven.]]: ''Свирица'', [[suomen kel'|suom.]]: ''Syvärinsuu'') om [[Vepsänma|vepsän]] žilo [[Venäma]]n [[Leningradan agj]]an [[Volhovan rajon]]as, [[Paksjogi|Paksjogen]] i [[Süvär'|Süvären]] randoil. Om [[Lidnsar'|Lidnsaren]] südäimes, sen keskuses om pen' so.
 
-Külän eläjiden lugu oli 655 ristitud 2007-žes vodes.
+Žilon eläjiden lugu oli 655 ristitud 2007-žes vodes.
 
 Sädi [[1938]]-žes vodes jäl'ges nellän küliden (Kondrat'jevon, Uden Süvärensun (se oli kaikiš suremb niišpäi), Vanhan Süvärensun da Tegimkülän) ühtištust.
 {{stub}}
