*Empty MediaWiki Message*

--- a/Aksintant.mw
+++ b/Aksintant.mw
@@ -17,7 +17,7 @@
 
 Ezmäine kirjutamine Aksintantan polhe datiruitud vn [[1633]]; siloi se om nimitud ''Оксёновская''-nimen al. 
 
-Külän eläjiden lugu oli 9 ristitud 2002-žes vodes, i seičeme heišpäi oma [[vepsläižed]].
+Külän eläjiden lugu oli 9 ristitud 2002-žes vodes, i seičeme heišpäi oliba [[vepsläižed]].
 {{stub}}
 
 [[Kategorii:Vepsän küläd]]
