--- a/LiAZ-677.mw
+++ b/LiAZ-677.mw
@@ -1,4 +1,4 @@
-[[File:Liazik.JPG|thumb|250px|LiAZ-677]]
+[[File:Liazik.JPG|thumb|250px|LiAZ-677M]]
 '''LiAZ-677''' ([[Venäkel'|venäkelel]]: ''ЛиАЗ-677'') om [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|NSTÜ:n]] avtobus. 
 {{stub}}
 
