*Empty MediaWiki Message*

--- a/Süvärensu.mw
+++ b/Süvärensu.mw
@@ -17,7 +17,7 @@
 
 Žilon eläjiden lugu oli 655 ristitud 2007-žes vodes.
 
-Sädi [[1938]]-žes vodes jäl'ges nellän küliden (Kondrat'jevon, Uden Süvärensun (se oli kaikiš suremb niišpäi), Vanhan Süvärensun da Tegimkülän) ühtištust.
+Sädi [[1938]]-žes vodes jäl'ges nellän külän (Kondrat'jevon, Uden Süvärensun (se oli kaikiš suremb niišpäi), Vanhan Süvärensun da Tegimkülän) ühtištust.
 {{stub}}
 
 [[Kategorii:Vepsän küläd]]
