*Empty MediaWiki Message*

--- a/Legendiden_murendajad.mw
+++ b/Legendiden_murendajad.mw
@@ -10,6 +10,25 @@
 * [[Imahara Grant|Grant Imahara]] (Grant Imahara)
 * [[Baster]] (Buster) ''(maneken)''
 
+== Tedoitud legendoiden ozutesed ==
+
+# Voib-ik ristitun [[än']] specialižita ladimita mureta [[stökol]]?
+# Voib-ik [[penni|monetut]], ku alleheitta se korktel sauvuselpäi, rikta mest mas?
+# Voib-ik konstruiruida täuz'funkcionaline i nägumatoi [[ištim katapul'tiruindan täht|avtoištim kirhuližen katapul'tiruindan voimusenke]]?
+# Voi-k [[Franklin Bendžamin|Bendžaminan Franklinan]] eksperiment [[il'mku]]nke olda tehtud todesižikš?
+# Om-ik [[kajaduz]] [[sorz]]an kräkindaspäi?
+# Voib-ik pörui [[lagiventilätor]] kroksaita mehen pä?
+# Voib-ik päzda tuikutezazegespäi, ku čuklahtada veden alle?
+# Voib-ik mureta [[lukkol]], ku ampta sihe?
+# Voib-ik sada elektroiškend, ku kusta kontaktižele rel'sale?
+# Voib-ik tehta raket poltusenke [[Salämi]]-kolbasaspäi?
+# Voib-ik lind mureta lendimen ocstökol?
+# Oliba-k amerikalaižed [[Kudmaine|Kudmaižes]]?
+# Voib-ik päzda upnudes avtospäi?
+# Voib-ik vezilämbitai [[boiler]] lendahtada kuti raket i ištta pertin katuz?
+# Voidas-ik poukahtuda [[konservad]] vai [[aerozol']] avtos, kudamb om lujas lämbitadud päiväižes?
+# Voib-ik poukahtuda [[nižan tobnenduz|nižaimplantant]] lendimes surel korktusel?
+
 == Irdkosketused ==
 
 * [http://dsc.discovery.com/fansites/mythbusters/mythbusters.html Oficialine sait]
