*Empty MediaWiki Message*

--- a/Kipinä.mw
+++ b/Kipinä.mw
@@ -1,5 +1,5 @@
 '''Kipinä''' om [[Vepsän kel'|vepsänkel'ne]], [[Suomen kel'|suomenkel'ne]] da [[Karjalan kel'|karjalankel'ne]] [[Karjala]]n lapsenaiglehtez. Nügüdläine päredaktor om [[Elina Bürkland]].
 
 {{stub}}
-[[Kategorii:Aiglehtesed]]
+[[Kategorii:Aiglehtesed kirjamišton mödhe]]
 [[Kategorii:Vepsän kel']]
