*Empty MediaWiki Message*

--- a/Voiviv_Kodzuv.mw
+++ b/Voiviv_Kodzuv.mw
@@ -4,6 +4,6 @@ Aiglehtest pästtas [[Siktivkar]]as, sen aluz om pandud vl [[1926]]. Tiraž — 
 
 {{stub}}
 
-[[Kategorii:Aiglehtesed]]
+[[Kategorii:Aiglehtesed kirjamišton mödhe]]
 [[Kategorii:Komin Tazovaldkund]]
 [[Kategorii:Komin kel']]
