--- a/Čužan_kiv.mw
+++ b/Čužan_kiv.mw
@@ -4,6 +4,6 @@ Pästtas vlpäi [[1997]]. Lähtleb kaks' kerdad vodes. Tiraž — 500 ekzemplär
 
 {{stub}}
 
-[[Kategorii:Aiglehtesed]]
+[[Kategorii:Aiglehtesed kirjamišton mödhe]]
 [[Kategorii:Komin Tazovaldkund]]
 [[Kategorii:Komin kel']]
