--- a/Ladv_(Leningradan_agj).mw
+++ b/Ladv_(Leningradan_agj).mw
@@ -1,3 +1,4 @@
+{{tärtused|Ladv}}
 '''Ladv''' ([[Venäkel'|ven.]] ''Ладва'') om vepsän [[külä]] [[Leningradan agj|Leningradan agjan]] [[Kos'kenaluižen rajon|Kos'kenaluižen rajonas]].
 
 Küläs om üks' parembišpäi vepsän rahvahan muzejoišpäi (sen tegii — istorik N. Finčenko). Ladv om vepsän runokirjutajan [[Nikolai Abramov|N. Abramovan]] kodikülä.
