--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -26,7 +26,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | [[Bad Boys Blue]]
 | {{GER}}
 | 1984—...
-| «[[You're a Woman]]» (1985), «[[Pretty Young Girl]]» (1985)
+| «[[You're a Woman]]» (1985), «[[Pretty Young Girl]]» (1985), «[[I Wanna Hear Your Heartbeat]]» (1986)
 |-
 | [[Baltimora]]
 | {{ITA}}
@@ -70,7 +70,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | [[C. C. Catch]]
 | {{NLD}}<br />{{GER}}
 | 1980—...
-| «[[I Can Lose My Heart Tonight]]» (1985), «[['Cause You Are Young]]» (1985), «[[Strangers by Night]]» (1985), «[[Heaven and Hell]]» (1986), «[[Soul Survivor]]» (1987)
+| «[[I Can Lose My Heart Tonight]]» (1985), «[['Cause You Are Young]]» (1985), «[[Strangers by Night]]» (1985), «[[Heaven and Hell]]» (1986), «[[Are You Man Enough|Are You Man Enough?]]» (1987),<br />«[[Soul Survivor]]» (1987)
 |-
 |}
 
