--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -9,7 +9,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 ! Voded
 ! Kaikiš tetabižiš pajod
 |-
-| [[a-ha]]
+| «[[a-ha]]»
 | {{NOR}}
 | 1982—1994, 1998—2010
 | «[[Take on Me]]» (1985), «[[The Sun Always Shines on T.V.]]» (1985)
@@ -23,27 +23,27 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 ! Voded
 ! Kaikiš tetabižiš pajod
 |-
-| [[Bad Boys Blue]]
+| «[[Bad Boys Blue]]»
 | {{GER}}
 | 1984—...
 | «[[You're a Woman]]» (1985), «[[Pretty Young Girl]]» (1985), «[[I Wanna Hear Your Heartbeat]]» (1986)
 |-
-| [[Baltimora]]
+| «[[Baltimora]]»
 | {{ITA}}
 | 1985—1987
 | «[[Tarzan Boy]]» (1985)
 |-
-| [[Billy Ocean]]
+| «[[Billy Ocean]]»
 | {{GBR}}
 | 1972—...
 | «[[Get Outta My Dreams, Get Into My Car]]» (1988)
 |-
-| [[Black Box]]
+| «[[Black Box]]»
 | {{ITA}}
 | 1988—1998
 | «[[Ride on Time]]» (1989)
 |-
-| [[Blue System]]
+| «[[Blue System]]»
 | {{GER}}
 | 1987—1998
 | «[[My Bed is Too Big]]» (1988), «Love Me on the Rocks» (1989), «Nobody Makes Me Crazy (Like You Do)» (1989)
@@ -53,7 +53,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | 1970—...
 | «[[Total Eclipse of the Heart]]» (1982), «[[Holding Out for a Hero]]» (1984)
 |-
-| [[Bronski Beat]]
+| «[[Bronski Beat]]»
 | {{GBR}}
 | 1983—1995
 | «[[Smalltown Boy]]» (1984)
@@ -86,7 +86,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | ''1983/''1987—1989''/1997''
 | «Touch My Heart» (1987)
 |-
-| [[Dead or Alive (grupp)|Dead or Alive]]
+| «[[Dead or Alive (grupp)|Dead or Alive]]»
 | {{GBR}}
 | 1980—2011
 | «[[You Spin Me Round (Like a Record)]]» (1985)
@@ -110,7 +110,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | 1983—...
 | «U.S.S.R.» (1986)
 |-
-| [[Erasure]]
+| «[[Erasure]]»
 | {{GBR}}
 | 1985—...
 | «[[I Love to Hate You]]» (1991)
@@ -124,7 +124,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 ! Voded
 ! Kaikiš tetabižiš pajod
 |-
-| [[Fake]]
+| «[[Fake]]»
 | {{SWE}}
 | 1977—1987
 | «Brick» (1985)
@@ -176,7 +176,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 ! Voded
 ! Kaikiš tetabižiš pajod
 |-
-| [[Imagination]]
+| «[[Imagination]]»
 | {{GBR}}
 | 1981—1992
 | «[[Just an Illusion]]» (1982)
@@ -190,7 +190,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 ! Voded
 ! Kaikiš tetabižiš pajod
 |-
-| [[Joy]]
+| «[[Joy]]»
 | {{AUT}}
 | 1985—...
 | «Touch by Touch» (1986), «Valerie» (1986)
@@ -214,7 +214,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | 1980—...
 | «[[Kids in America]]» (1981)
 |-
-| [[Koto (grupp)|Koto]]
+| «[[Koto (grupp)|Koto]]»
 | {{ITA}}
 | 1982—1993, 2001—...
 | «[[Visitors]]» (1985)
@@ -228,7 +228,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 ! Voded
 ! Kaikiš tetabižiš pajod
 |-
-| [[Laserdance]]
+| «[[Laserdance]]»
 | {{NLD}}
 | 1984—1995, 2000
 | «PowerRun» (1987)
