--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -245,6 +245,45 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 |-
 |}
 
+== M ==
+{| class="sortable wikitable"
+! Edestai
+! Valdkund
+! Voded
+! Kaikiš tetabižiš pajod
+|-
+| [[Meirin Maik|Maik Meirin]]
+| {{GER}}
+| 1980—...
+| «Love Spy» (1986), «Agent of Liberty» (1987)
+|-
+| [[Kein Medlin|Medlin Kein]]
+| {{SWE}}
+| 1986—...
+| «You And I» (1979), «[[You Can]]» (1981), «I'm No Angel» (1985)
+|-
+| [[Smit Mendi|Mendi Smit]]
+| {{GBR}}
+| 1978—...
+| «I Just Can't Wait» (1987), «Positive Reaction» (1987)
+|-
+| [[Krecu Mihai|Mihai Krecu]]
+| {{ROU}}<br />{{GER}}
+| 1978—...
+| «[[Samurai (Did You Ever Dream)]]» (1986)
+|-
+| «[[Modern Talking]]»
+| {{GER}}
+| 1984—1987, 1998—2003
+| «You're My Heart, You're My Soul» (1984), «You Can Win If You Want» (1984), «Cheri, Cheri Lady» (1985), «Brother Louie» (1986),<br />«Atlantis Is Calling (S.O.S. for Love)» (1986), «Geronimo's Cadillac» (1986)
+|-
+| [[Hed Mürrei|Mürrei Hed]]
+| {{GBR}}
+| 1966—...
+| «[[One Night in Bangkok]]» (1984)
+|-
+|}
+
 == Ž ==
 {| class="sortable wikitable"
 ! Edestai
