мне кажется, тут скорей адессив

--- a/Rand_(Vepsän_rahvahaline_küläkund).mw
+++ b/Rand_(Vepsän_rahvahaline_küläkund).mw
@@ -15,7 +15,7 @@
 }}
 '''Rand''' ([[venäkel'|ven.]]: ''Берег'') om pen' [[Vepsänma|vepsän]] külä [[Venäma]]n [[Vologdan agj]]an [[Babajevon rajon]]as, [[Vepsän rahvahaline küläkund|Vepsän rahvahaližes küläkundas]].
 
-Ezmäine kirjutamine Randan (siloi — Suren Randan (''Большой Берег'')) polhe datiruitud vn [[1626]]. Läz sidä eländpunktad oli olmas Pen' Pand-ki (''Малый Берег''); nened küläd oma ühtenzoittud edelespäi.
+Ezmäine kirjutamine Randan (siloi — Suren Randan (''Большой Берег'')) polhe om datiruidud vl [[1626]]. Läz sidä eländpunktad oli olmas Pen' Pand-ki (''Малый Берег''); nened küläd oma ühtenzoittud edelespäi.
 
 Külän eläjiden lugu oli 6 ristitud 2002-žes vodes, i kaik oliba [[vepsläižed]].
 {{stub}}
