--- a/Aksintant.mw
+++ b/Aksintant.mw
@@ -15,7 +15,7 @@
 }}
 '''Aksintant''' ([[venäkel'|ven.]]: ''Аксёново'') om pen' [[Vepsänma|vepsän]] külä [[Venäma]]n [[Vologdan agj]]an [[Babajevon rajon]]as, [[Vepsän rahvahaline küläkund|Vepsän rahvahaližes küläkundas]].
 
-Ezmäine kirjutamine Aksintantan polhe datiruitud vn [[1633]]; siloi se om nimitadud ''Оксёновская''-nimen al. 
+Ezmäine kirjutamine Aksintantan polhe om datiruitud vl [[1633]]; siloi se om nimitadud ''Оксёновская''-nimen al. 
 
 Külän eläjiden lugu oli 9 ristitud 2002-žes vodes, i seičeme heišpäi oliba [[vepsläižed]].
 {{stub}}
