--- a/Durov_Vladimir.mw
+++ b/Durov_Vladimir.mw
@@ -1,7 +1,5 @@
 '''Vladimir Durov''':
 * [[Durov, Vladimir Grigor'jevič|Vladimir Grigor'jevič Durov]], dressirui
 * '''[[Durov, Vladimir Leonidovič|Vladimir Leonidovič Durov]], dressirui'''
-* [[Durov, Vladimir Alekseevič|Vladimir Alekseevič Durov]], himik
+* [[Durov, Vladimir Aleksejevič|Vladimir Aleksejevič Durov]], himik
 {{t}}
-
-[[ru:Дуров, Владимир]]
