*Empty MediaWiki Message*

--- a/I_Will_Survive.mw
+++ b/I_Will_Survive.mw
@@ -1,4 +1,4 @@
-'''«I Will Survive»''' (''Päzdun henghe'') om [[Geinor Glorija|Glorijan Geinoran]] legendine pajo da ühtennimine singl «[[Love Tracks]]»-al'bomaspäi, kaikiš om pasttud 1978-žen voden redukul. Se om klassine da üks' kaikižiš tetabižiš pajoišpäi [[disko]]-žanras. Pajon tekst om [[anglijan kel'|anglijan kelel]].
+'''«I Will Survive»''' (''Päzun henghe'') om [[Geinor Glorija|Glorijan Geinoran]] legendine pajo da ühtennimine singl «[[Love Tracks]]»-al'bomaspäi, kudamb om pasttud 1978-žen voden redukul. Se om klassine da üks' kaikiš tetabambiš pajoišpäi [[disko]]-žanras. Pajon tekst om [[anglijan kel'|anglijan kelel]].
 {{stub}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
