*Empty MediaWiki Message*

--- a/Voyage,_voyage.mw
+++ b/Voyage,_voyage.mw
@@ -1,4 +1,4 @@
-'''«Voyage, voyage»''' (''Lenduz, lenduz'') om [[Desireless]]:an tetab pajo da ühtinnimine singl «[[François]]»-al'bomas, kudamb om pasttud [[1986]]-žen voden tal'vkul.
+'''«Voyage, voyage»''' (''Lenduz, lenduz'') om [[Desireless]]:an tetab pajo da ühtinnimine singl «[[François]]»-al'bomas, kudamb om pästtud [[1986]]-žen voden tal'vkul.
 
 Pajon tekst om [[francijan kel'|francijan kelel]].
 {{stub}}
