*Empty MediaWiki Message*

--- a/It's_Raining_Men.mw
+++ b/It's_Raining_Men.mw
@@ -1,4 +1,4 @@
-'''«It's Raining Men»''' (''Om meheline vihm'') om „[[The Weather Girls]]“-muzikaližen kollektivan legendine pajo da ühtennimine singl «[[Success]]»-al'bomas, kaikiš om pasttud [[1982]]-žen voden sügüz'kul. Se om klassine pajo [[disko]]-žanras.
+'''«It's Raining Men»''' (''Om meheline vihm'') om „[[The Weather Girls]]“-muzikaližen kollektivan legendine pajo da ühtennimine singl «[[Success]]»-al'bomas, kudamb om pästtud [[1982]]-žen voden sügüz'kus. Se om klassine pajo [[disko]]-žanras.
 
 Pajon tekst om [[Anglijan kel'|anglijan kelel]].
 {{stub}}
