*Empty MediaWiki Message*

--- a/Vilulind.mw
+++ b/Vilulind.mw
@@ -1,4 +1,5 @@
 [[Fail:Pyrrhula pyrrhula bl1.jpg|thumb|right|300px|Vilulind]]
+[[File:Pyrrhula pyrrhula europoea Gouvieux 222.jpg|thumb|''Pyrrhula pyrrhula europoea'']]
 '''Vilulind''' (lat.: ''Pyrrhula pyrrhula'') om [[lind]].
 
 [[Kategorii:Lindud]]
