*Empty MediaWiki Message*

--- a/Vilulind.mw
+++ b/Vilulind.mw
@@ -1,5 +1,5 @@
 [[Fail:Pyrrhula pyrrhula bl1.jpg|thumb|right|300px|Vilulind]]
-[[File:Pyrrhula pyrrhula europoea Gouvieux 222.jpg|thumb|''Pyrrhula pyrrhula europoea'']]
+[[File:Pyrrhula pyrrhula europoea Gouvieux 222.jpg|thumb|left|220px|Vilulindan munad]]
 '''Vilulind''' (lat.: ''Pyrrhula pyrrhula'') om [[lind]].
 
 [[Kategorii:Lindud]]
