--- a/Slavine_neopaganuz.mw
+++ b/Slavine_neopaganuz.mw
@@ -4,7 +4,7 @@ om uz' [[neopaganizm|neopaganistine]] religiozine likund, kundamb läksi 20-žes
 
 Om [[antihristanuskond]]aline, [[nacionalizm|nacionalistine]], erasišti [[ekstremizm|estremistine]] čuradamine. Sadi sur' leviganduz [[Venäma]]s i [[Ukrain]]as, a mugažo [[Pol'šanma]]s, [[Slovakii|Slovakijas]], [[Serbii|Serbijas]] i m. e.
 
-Läz 1—2 etništ [[venälaižed|venälašt]] oma neopaganistad.
+Läz 1—2% etništ [[venälaižed|venälašt]] oma neopaganistad.
 {{stub}}
 
 [[Kategorii:Neopaganizm]]
