--- a/Slavine_neopaganuz.mw
+++ b/Slavine_neopaganuz.mw
@@ -1,8 +1,8 @@
 [[Fail:Russian Rodnovers (2).PNG|thumb|right|250px|Venälaižiden neopaganistoiden [[fallos|falline]] ritual]]
 '''Slavine neopaganizm''' ([[venäkel'|ven.]]: ''Родноверие'', [[ukrainan kel'|ukr.]]: ''Рідновірство'', [[pol'šan kel'|pol'š.]]: ''Rodzimowierstwo'')
-om uz' [[neopaganizm|neopaganistine]] religiozine likund, kundamb läksi 20-žes voz'sadas slavižiš valdkundoiš (i valdkundoiš surenke slaviženke diasporanke). Se om naprind rekonstruiruida amuišt slavišt religijanveroid, hot' sen rezul'tat, tobjimalaz, ei ole nimidä ühthišt todesiženke hristanuskonedeližidenke uskondoidenke.
+om uz' [[neopaganizm|neopaganistine]] religiozine likund, kundamb läksi 20-žes voz'sadas slavižiš valdkundoiš (i valdkundoiš surenke slaviženke diasporanke). Se om naprind rekonstruiruida amuižed slavižed religijanverod, hot' sen rezul'tat, tobjimalaz, ei ole nimidä ühthišt todesiženke hristanuskonedeližidenke uskondoidenke.
 
-Om [[antihristanuskond]]aline, [[nacionalizm|nacionalistine]], erasišti [[ekstremizm|estremistine]] čuradamine. Sadi sur' leviganduz [[Venäma]]s i [[Ukrain]]as, a mugažo [[Pol'šanma]]s, [[Slovakii|Slovakijas]], [[Serbii|Serbijas]] i m. e.
+Om [[antihristanuskond]]aline, [[nacionalizm|nacionalistine]], erasišti [[ekstremizm|ekstremistine]] čuradamine. Sadi sur' leviganduz [[Venäma]]s i [[Ukrain]]as, a mugažo [[Pol'šanma]]s, [[Slovakii|Slovakijas]], [[Serbii|Serbijas]] i m. e.
 
 Läz 1—2% etništ [[venälaižed|venälašt]] oma neopaganistad.
 {{stub}}
