--- a/Novosokol'niki.mw
+++ b/Novosokol'niki.mw
@@ -11,7 +11,7 @@
 |-
 |Pind|| 
 |}
-'''Novosokol'niki'''' ([[Venäkel'|ven]].: ''Новосокольники'') om lidn [[Venäma]]s, [[Pskovan agj]]as.
+'''Novosokol'niki''' ([[Venäkel'|ven]].: ''Новосокольники'') om lidn [[Venäma]]s, [[Pskovan agj]]as.
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
