*Empty MediaWiki Message*

--- a/Vepsän_küläd.mw
+++ b/Vepsän_küläd.mw
@@ -130,13 +130,41 @@ Se om eläbiden '''[[Vepsänma|vepsän küliden]] nimikirjutez''' regionoiden i 
 | ''Аксёново''
 | 9 (2002)
 |-
+| [[Gridänkülä]]
+| ''Гридино''
+| 3 (2002)
+|-
 | [[Kaist]]
 | ''Кийно''
 | 91 (2002)
 |-
+| [[Kundust]]
+| ''Киндаево''
+| 10 (2002)
+|-
+| [[Markutan]]
+| ''Марково''
+| 24 (2002)
+|-
+| [[Prangatist]]
+| ''Панкратово''
+| 83 (2002)
+|-
+| [[Pust (19 205 832 010)]]
+| ''Пустошка''
+| 11 (2002)
+|-
+| [[Pust (19 205 864 008)]]
+| ''Пустошка''
+| 10 (2002)
+|-
 | [[Rand (külä)|Rand]]
 | ''Берег''
 | 6 (2002)
+|-
+| [[Slabad]]
+| ''Слобода''
+| 18 (2002)
 |-
 | [[Sontaga]]
 | ''Заболотье''
@@ -149,6 +177,10 @@ Se om eläbiden '''[[Vepsänma|vepsän küliden]] nimikirjutez''' regionoiden i 
 | [[Šušt]]
 | ''Ошта''
 | 1.204 (2002)
+|-
+| [[Turzin]]
+| ''Туржино''
+| 9 (2002)
 |-
 | [[Virahtan]]
 | ''Вирино''
