--- a/Lumenšur.mw
+++ b/Lumenšur.mw
@@ -1,5 +1,5 @@
 [[Fail:Santa Claus glass snow balls.jpg|thumb|right|250px|Lumenšurud]]
-'''Lumenšur''' om populärine [[Uz' voz'|Uden voden]] da [[Raštvad|Raštvoiden]] suvenir [[šur|stökolšurun]] nägul. Om täuttud [[gel'|gelil]] da hoštandheničuil {{k|блёстками}}; pudištandan aigan hoštandheničud širmotase aniku «[[lumi]]».
+'''Lumenšur''' om populärine [[Uz' voz'|Uden voden]] da [[Raštvad|Raštvoiden]] suvenir [[šur|stökolšurun]] nägul. Om täuttud [[gel'|gelil]] da loštkil; pudištandan aigan hoštandheničud širmotase aniku «[[lumi]]».
 {{stub}}
 
 [[Kategorii:Uz' voz']]
