--- a/Slavižed_keled.mw
+++ b/Slavižed_keled.mw
@@ -365,7 +365,7 @@ Amuuz'lidnan kel' harvašti mülütas m. k. pohjoižslavižen kel'vezaha.
 | ''Црькъвьнословѣньскъ ѩꙁꙑкъ''
 | päivnouzm- i suvislavižed valdkundad
 | kut mamankelel — ei ole
-| kävutamas [[ortodoksine hristanuskond|ortodoksižen]] jumalanslužendas {{k|богослужении}}
+| kävutamas [[ortodoksine hristanuskond|ortodoksižen]] jumalanradnikoičendas
 | kirilline
 | chu
 |-
@@ -374,7 +374,7 @@ Amuuz'lidnan kel' harvašti mülütas m. k. pohjoižslavižen kel'vezaha.
 | ''???''
 | [[Fail:Flag of Serbia.svg|border|20px]] [[Serbii]]
 | kut mamankelel — ei ole
-| kävutamas [[ortodoksine hristanuskond|ortodoksižen]] jumalanslužendas Serbijas
+| kävutamas [[ortodoksine hristanuskond|ortodoksižen]] jumalanradnikoičendas Serbijas
 | kirilline
 | —
 |-
