--- a/Bitlad.mw
+++ b/Bitlad.mw
@@ -1,5 +1,5 @@
 {{1000}}
-'''«The Beatles»''' om [[Sur' Britanii|britanijalaine]] muzikaline [[rok]]grupp.
+'''«Bitlad»''' ([[anglijan kel'|angl.]]: '''''«The Beatles»''''') oli [[Sur' Britanii|britanijalaine]] muzikaline [[rok]]grupp.
 
 Mülükund:
 * [[Džon Lennon]] (John Lennon)
