*Empty MediaWiki Message*

--- a/You're_My_Heart,_You're_My_Soul.mw
+++ b/You're_My_Heart,_You're_My_Soul.mw
@@ -11,7 +11,7 @@ Saksanmas<ref>http://www.musicline.de/de/chartverfolgung_summary/artist/MODERN+T
 
 Muzikklip om fil'mdud [[Lüksemburg]]as, [[1984]]-žes vodes.<ref>http://www.bohlenworld.de/biography?language=en</ref>
 
-Pajon uz' versii, '''«[[You're My Heart, You're My Soul '98]]»''', oli pästtud [[1998]]-žen voden [[16. keväz'ku|keväz'kun 16. päiväl]], kut singl «[[Back for Good]]»-al'bomaspäi. Se oli populärine mugažo, i mülüi äjiden evropaližiden valdkundoiden hitparadoihe.<ref>http://www.musicline.de/de/chartverfolgung_summary/artist/MODERN+TALKING/single</ref><ref>http://www.swisscharts.com/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul+%2798&cat=s</ref><ref>http://www.charts.de/charts.asp?cat=s&country=de&year=1998&date=19980406&x=12&y=16</ref><ref>http://www.charts.de/charts.asp?cat=s&country=de&year=1998&date=19980413&x=39&y=15</ref> Uz' singlan pästand linni platinaižeks Saksanmas<ref>http://www.musikindustrie.de/gold_platin_datenbank/?action=suche&strTitel=You%27re+My+Heart%2C+You%27re+My+Soul&strInterpret=Modern+Talking&strTtArt=alle&strAwards=checked</ref> da kuldaižeks Francijas<ref>http://www.disqueenfrance.com/fr/page-259165.xml?year=1998&type=7</ref>.
+Pajon uz' versii, '''«[[You're My Heart, You're My Soul '98]]»''', oli pästtud [[1998]]-žen voden [[16. keväz'ku|keväz'kun 16. päiväl]], kut singl «[[Back for Good]]»-al'bomaspäi. Se oli populärine mugažo, i mülüi äjiden evropaližiden valdkundoiden hitparadoihe.<ref>http://www.musicline.de/de/chartverfolgung_summary/artist/MODERN+TALKING/single</ref><ref>http://www.swisscharts.com/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul+%2798&cat=s</ref><ref>http://www.charts.de/charts.asp?cat=s&country=de&year=1998&date=19980406&x=12&y=16</ref><ref>http://www.charts.de/charts.asp?cat=s&country=de&year=1998&date=19980413&x=39&y=15</ref> Uden singlan pästand linni platinaižeks Saksanmas<ref>http://www.musikindustrie.de/gold_platin_datenbank/?action=suche&strTitel=You%27re+My+Heart%2C+You%27re+My+Soul&strInterpret=Modern+Talking&strTtArt=alle&strAwards=checked</ref> da kuldaižeks Francijas<ref>http://www.disqueenfrance.com/fr/page-259165.xml?year=1998&type=7</ref>.
 
 == Südäiolend ==
 Pajo om änetud [[evropop]]-, [[disko]]- da [[sintipop]]-žanroiš.
