*Empty MediaWiki Message*

--- a/2_Eivissa.mw
+++ b/2_Eivissa.mw
@@ -10,7 +10,7 @@
  | Leiblad = 
  | Toižed projektad = [[Team 33]]
  | Mülükund = 
- | Eksühtnijad = [[Lian Ross|Žozefine Hebel']], Ambrogio Krotti, [[Rodriges Luis|Luis Rodriges Salasar]], David Granados Lasera, Terri Bjerre, Melani Mollinus, Pjerro Brunneti
+ | Eksühtnijad = [[Lian Ross|Žozefine Hibel']], Ambrogio Krotti, [[Rodriges Luis|Luis Rodriges Salasar]], David Granados Lasera, Terri Bjerre, Melani Mollinus, Pjerro Brunneti
  | Sait = 
 }}
 '''«2 Eivissa»''' oli [[Saksanma|saksalaine]] evrodensgrupp [[Hamburg]]aspäi, [[1997]]. vlpäi [[2005]]. vhesai.
