*Empty MediaWiki Message*

--- a/Lian_Ross.mw
+++ b/Lian_Ross.mw
@@ -2,7 +2,7 @@ __NOTOC__
 [[Fail:Lian Ross in Poland, Janikowo (2010).jpg|thumb|right|250px|Lian Ross [[Pol'šanma]]s (2010)]]
 '''Lian Ross''' (todesine nimi — '''Žozefina Hibel'''' ([[saksan kel'|saks.]]: ''Josephine Hiebel''); sünd. [[8. tal'vku]] [[1962]], [[Gamburg]], [[Saksanma]]) om saksalaine pajatai da muzikankirjutai.
 
-Oli «[[Fun Factory]]»- (1999—2003) i «[[2 Eivissa]]»- (1997—2005) gruppiden ühtnii. Žozefina ezini ''Josy'', ''Lian Ross'' (tobjimalaz tetab arni muga), ''Creative Connection'', ''Dana Harris'', ''Divina'', ''Tears 'n Joy''-psevdonimiden al.
+Oli «[[Fun Factory]]»- (1999—2003) i «[[2 Eivissa]]»- (1997—2005) gruppiden ühtnii. Žozefina ezini ''Josy''-, ''Lian Ross''- (tobjimalaz tetab arni muga), ''Creative Connection''-, ''Dana Harris''-, ''Divina''-, ''Tears 'n Joy''-psevdonimiden al.
 
 Hänen soline karjer augotab [[1980]]-žes vodes. Kaikiš tetabamb pajo — «Say You'll Never», toižed populärižed kompozicijad oma «Fantasy», «It's Up to You» da «Scratch My Name» (jäl'gmäine kut Creative Connection). Lianan Rossan debütine al'bom («I Got The Beat»), kut ni čudokahašti, om pästtud vaiše [[2013]]-žes vodes.
 
