--- a/Lian_Ross.mw
+++ b/Lian_Ross.mw
@@ -6,6 +6,8 @@ Oli «[[Fun Factory]]»- (1999—2003) i «[[2 Eivissa]]»- (1997—2005) gruppi
 
 Hänen soline karjer augotab [[1980]]-žes vodes. Kaikiš tetabamb pajo — «Say You'll Never», toižed populärižed kompozicijad oma «Fantasy», «It's Up to You» da «Scratch My Name» (jäl'gmäine kut Creative Connection). Lianan Rossan debütine al'bom («I Got The Beat»), kut ni čudokahašti, om pästtud vaiše [[2013]]-žes vodes.
 
+[[Rodriges Luis|Luisan Rodrigesan]] ([[Modern Talking]]:an eksprodüseran) ak.
+
 == Diskografii (vaiše kut Lian Ross) ==
 
 === Al'bomad ===
