*Empty MediaWiki Message*

--- a/Šond'al.mw
+++ b/Šond'al.mw
@@ -13,7 +13,7 @@
  | Telefonkod = +7-81365
  | Aigvö = [[UTC]]+4
 }}
-'''Šond'al''' ([[venäkel'|ven.]]: ''Шондовичи'') om [[Vepsänma|vepsän]] külä [[Venäma]]n [[Leningradan agj]]an [[Podporožjen rajon|Kos'kenaluižes (Podporožjes) rajonas]], [[Ojat']]-jogen randoil.
+'''Šond'al''' ([[venäkel'|ven.]]: ''Шондовичи'') om [[Vepsänma|vepsän]] külä [[Venäma]]n [[Leningradan agj]]an [[Podporožjen rajon|Kos'kenaluižes (Podporožjes) rajonas]], [[Ojat' (jogi)|Ojat'jogen]] randoil.
 
 Külän eläjiden lugu oli 61 ristitud 2007-žes vodes, tobjimalaz [[vepsläižed]].
 {{stub}}
