*Empty MediaWiki Message*

--- a/Vepsän_rahvahaline_küläkund.mw
+++ b/Vepsän_rahvahaline_küläkund.mw
@@ -1,5 +1,5 @@
 [[Fail:Location of Vepsian Settlement (Babaevsky District, Vologda Oblast).svg|border|right|250px]]
-'''Vepsän (rahvahaline) küläkund''' ([[venäkel'|ven.]]: ''Вепсское национальное сельское поселение'') om küläkund [[Venäma]]n [[Vologdan agj]]an [[Babajevon rajon]]as.
+'''Vepsän rahvahaline küläkund''' ([[venäkel'|ven.]]: ''Вепсское национальное сельское поселение'') om küläkund [[Venäma]]n [[Vologdan agj]]an [[Babajevon rajon]]as.
 
 Avaitud [[2009]]-žes vodes. Küläkundan keskuz — [[Timošinkülä]]. Nügüdläine pämez' om [[Ivanova Larisa|Larisa Vasil'jevna Ivanova]] (vlpäi 2009).
 
