*Empty MediaWiki Message*

--- a/Kettunen_Lauri.mw
+++ b/Kettunen_Lauri.mw
@@ -1,6 +1,6 @@
 '''Lauri Kettunen''' — sur’ suomalaine kelentedomez', [[Tartu|Tartun]] da [[Hel'sinki|Hel'sinkin]] [[universitet|universitetoiden]] professor, [[Vepsän kel'|vepsän]] i toižiden Baltijan meren suomalaižiden keliden tedoidai. 
 
-Monografijad [[Vepsän kel'|vepsän keles]]: "Suvivepsläižen dialektan istorine fonetik" ("Lõunavepsa häälik ajalugu", 1922), "Vepsän dialektoiden sintaksis" ("Vepsän murteiden lauseoppilinen tutkumus", 1943), toižed tedokirjutesed [[Vepsän kel'|vepsän kelen]] polhe.
+Monografijad [[Vepsän kel'|vepsän keles]]: "Suvivepsläižen dialektan istorine fonetik" ("Lõunavepsa häälik-ajalugu", 1922), "Vepsän dialektoiden sintaksis" ("Vepsän murteiden lauseoppilinen tutkumus", 1943), toižed tedokirjutesed [[Vepsän kel'|vepsän kelen]] polhe.
 {{stub}}
 
 [[Kategorii:Kelentedaimehed]]
