*Empty MediaWiki Message*

--- a/Vepsän_rahvahaline_küläkund.mw
+++ b/Vepsän_rahvahaline_küläkund.mw
@@ -50,6 +50,7 @@ Eläjiden lugu oli 1.269 ristitud 2010-žes vodes, vähemb pol't heišpäi oliba
 * [http://vepsskoe.ru/ Oficialine sait]
 {{stub}}
 
+[[Katetgorii:Vepsän rahvahaline küläkund|*]]
 [[Kategorii:Vepsän küläkundad]]
 [[Kategorii:Vepsänma]]
 [[Kategorii:Babajevon rajon]]
