*Empty MediaWiki Message*

--- a/Aksintant.mw
+++ b/Aksintant.mw
@@ -23,3 +23,4 @@ Külän eläjiden lugu oli 9 ristitud 2002-žes vodes, i seičeme heišpäi olib
 [[Kategorii:Vepsän küläd]]
 [[Kategorii:Venäman küläd]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
+[[Kategorii:Vepsän rahvahaline küläkund]]
