*Empty MediaWiki Message*

--- a/Kaist.mw
+++ b/Kaist.mw
@@ -1,7 +1,9 @@
 '''Kaist''' ([[venäkel'|ven.]]: ''Кийно'') om vepsän [[külä]] [[Vologdan agj]]an [[Babajevon rajon]]as.
 
 {{Vepsän küläd Vologdan agjan Babajevon rajonas}}
-{{DEFAULTSORT:Kuja}}
+{{DEFAULTSORT:Kaist}}
 {{stub}}
 
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
+[[Kategorii:Venäman küläd]]
+[[Kategorii:Vepsän rahvahaline küläkund]]
