*Empty MediaWiki Message*

--- a/Rand_(Vepsän_rahvahaline_küläkund).mw
+++ b/Rand_(Vepsän_rahvahaline_küläkund).mw
@@ -23,3 +23,4 @@ Külän eläjiden lugu oli 6 ristitud 2002-žes vodes, i kaik oliba [[vepsläiž
 [[Kategorii:Vepsän küläd]]
 [[Kategorii:Venäman küläd]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
+[[Kategorii:Vepsän rahvahaline küläkund]]
