*Empty MediaWiki Message*

--- a/Sontaga.mw
+++ b/Sontaga.mw
@@ -18,7 +18,7 @@
 Külän eläjiden lugu om 45 ristitud (2002).
 {{stub}}
 
-[[Kategorii:Babajevon rajon]]
+[[Kategorii:Vepsän rahvahaline küläkund]]
 [[Kategorii:Vepsän küläd]]
 [[Kategorii:Venäman küläd]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
