*Empty MediaWiki Message*

--- a/Surg.mw
+++ b/Surg.mw
@@ -19,5 +19,6 @@ Surgan eläjiden lugu om 32 ristitud (2002).
 {{stub}}
 
 [[Kategorii:Vepsän küläd]]
-[[Kategorii:Babajevon rajon]]
+[[Kategorii:Vepsän rahvahaline küläkund]]
+[[Kategorii:Venäman küläd]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
