--- a/Lisicina_Anna.mw
+++ b/Lisicina_Anna.mw
@@ -23,5 +23,5 @@ Anna oli sündnu vl. 1922 Ozreis (ven. Žitnoručein külä) (nügüd’ [[Kalei
 == Irdkosketused ==
 * [http://www.warheroes.ru/hero/hero.asp?Hero_id=1682 Annan Lisicinan biografii «Man vägimehid»-saitas] (venäkelel)
 
-
+[[Kategorii:Sodatö]]
 [[Kategorii:Vepsläižed]]
