*Empty MediaWiki Message*

--- a/Melent'jeva_Marija.mw
+++ b/Melent'jeva_Marija.mw
@@ -1,4 +1,4 @@
-'''Marija Melent'jeva''' (1924 — 1943) om [[Karjalaižed|karjalaine]] partizan, Nevondkundaližen Ühtištusen vägimez'.
+'''Marija Melent'jeva''' (1924 — 1943) oli [[Karjalaižed|karjalaine]] partizan, Nevondkundaližen Ühtištusen vägimez'.
 {{stub}}
 
 [[Kategorii:Sodatö]]
