*Empty MediaWiki Message*

--- a/Vepsän_küläd.mw
+++ b/Vepsän_küläd.mw
@@ -146,6 +146,10 @@ Se om eläbiden '''[[Vepsänma|vepsän küliden]] nimikirjutez''' regionoiden i 
 | ''Марково''
 | 24 (2002)
 |-
+| [[Oja (Vologdan ahj)|Oja]]
+| ''Ручей''
+| 1 (2002)
+|-
 | [[Prangatist]]
 | ''Панкратово''
 | 83 (2002)
