--- a/Dahno_Vladimir.mw
+++ b/Dahno_Vladimir.mw
@@ -1,6 +1,4 @@
-'''Vladimir Avksent'jevič Dahno''' ([[ukrainan kel'|ukr.]]: ''Володимир Авксентійович Дахно'', [[venäkel'|ven.]]: ''Владимир Авксентьевич Дахно''; sünd. [[7. keväz'ku]] [[1932]], [[Zaporož'je]], [[NSTÜ]] — kol. [[28. heinku]]<ref>[http://gazeta.ua/ru/articles/culture-newspaper/_avtor-multseriala-o-kazakah-umer-vo-sne/123240 Автор мультсериала о казаках умер во сне]</ref> [[2006]], [[Kijev]], [[Ukrain]]) oli tetab ukrainalaine mul'tiplikator, režissör da kinotarinantegii. Enamb 20 mul'tfil'moiden, sidä kesken tetaban «[[Kozakad (mul'tserial)|Kozakad]]»-mil'tserialan, tegii.
-
-{{reflist}}
+'''Vladimir Avksent'jevič Dahno''' ([[ukrainan kel'|ukr.]]: ''Володимир Авксентійович Дахно'', [[venäkel'|ven.]]: ''Владимир Авксентьевич Дахно''; sünd. [[7. keväz'ku]] [[1932]], [[Zaporož'je]], [[NSTÜ]] — kol. [[28. heinku]] [[2006]], [[Kijev]], [[Ukrain]]) oli tetab ukrainalaine mul'tiplikator, režissör da kinotarinantegii. Enamb 20 mul'tfil'moiden, sidä kesken tetaban «[[Kozakad (mul'tserial)|Kozakad]]»-mil'tserialan tegii.
 {{stub}}
 
 [[Kategorii:Mul'tiplikatorad]]
