*Empty MediaWiki Message*

--- a/Akad_(fil'm).mw
+++ b/Akad_(fil'm).mw
@@ -16,8 +16,9 @@ Fil'mas om äi [[lajindvajhed|lajindvajhid]].
 * Anastasija Lübimova
 * [[Sidorov Gennadii|Gennadii Sidorov]] — ''Fed'ka''
 
-da toižed professionaližed i ei professionaližed aktörad.
+da toižed professionaližed i professionalitomad aktörad.
 
 {{stub}}
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
+[[Kategorii:Venäman fil'mad]]
