--- a/Jügu_200_(fil'm).mw
+++ b/Jügu_200_(fil'm).mw
@@ -22,3 +22,4 @@ Režissör — [[Balabanov Aleksei|Aleksei Balabanov]].
 {{stub}}
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
+[[Kategorii:Venäman fil'mad]]
