*Empty MediaWiki Message*

--- a/Kut_minä_mänetin_necil_kezal.mw
+++ b/Kut_minä_mänetin_necil_kezal.mw
@@ -13,3 +13,4 @@ Režissör — [[Popogrebskii Aleksei|Aleksei Popogrebskii]].
 * [http://etimletom.ru/ fil'man sait]
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
+[[Kategorii:Venäman fil'mad]]
