*Empty MediaWiki Message*

--- a/Pohjoižen_saldat_(fil'm).mw
+++ b/Pohjoižen_saldat_(fil'm).mw
@@ -61,3 +61,5 @@ MTV3 saitan mödhe, pajoiden kirjutez oli ezitadud redukun 11. päiväl, 2006.<r
 {{stub}}
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
+[[Kategorii:Suomenman fil'mad]]
+[[Kategorii:Kitajan fil'mad]]
