*Empty MediaWiki Message*

--- a/Puhtaz,_ajatud.mw
+++ b/Puhtaz,_ajatud.mw
@@ -5,3 +5,4 @@ Fil'm om noren [[šizofrenii|šizofrenikan]] polhe, kudamb naprib pördutada ič
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
 [[Kategorii:Arthaus]]
+[[Kategorii:AÜV:oiden fil'mad]]
