*Empty MediaWiki Message*

--- a/Radajad_lähttas_"Lümjer"-fabrikaspäi.mw
+++ b/Radajad_lähttas_"Lümjer"-fabrikaspäi.mw
@@ -11,3 +11,4 @@ Ezmäižen kerdan se om ozutadud [[22. keväz'ku]]n [[1895]].
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
 [[Kategorii:Debütad]]
+[[Kategorii:Francijan fil'mad]]
