*Empty MediaWiki Message*

--- a/Rauk,_rauk_Pavel.mw
+++ b/Rauk,_rauk_Pavel.mw
@@ -14,3 +14,4 @@ Režissör — [[Mel'nikov Vitalii|Vitalii Mel'nikov]].
 {{stub}}
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
+[[Kategorii:Venäman fil'mad]]
