*Empty MediaWiki Message*

--- a/Sar'_(fil'm,_Venäma,_2006).mw
+++ b/Sar'_(fil'm,_Venäma,_2006).mw
@@ -47,3 +47,4 @@ Image:Russia Rabocheostrovsk Ostrovs scenery barge.jpg|Barž
 * [http://dmitrysh.gorod.tomsk.ru/index-1319822418.php "Ostrov"-fil'man kuvitandan sijad (18 kuvad)]
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
+[[Kategorii:Venäman fil'mad]]
