*Empty MediaWiki Message*

--- a/Ei_ole_ted_ülez.mw
+++ b/Ei_ole_ted_ülez.mw
@@ -5,7 +5,7 @@
 * [[Pol Edrian|Edrian Pol]] — ''Gevin''
 * [[Lokan Emi|Emi Lokan]] — ''Rebekka''
 * [[Mandell Den|Den Mandell]] — ''Eddi''
-da toižed.
 {{stub}}
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
+[[Kategorii:AÜV:oiden fil'mad]]
