*Empty MediaWiki Message*

--- a/Tähthasižed_sodad.mw
+++ b/Tähthasižed_sodad.mw
@@ -19,5 +19,5 @@ Vl 2012 tuli ezmäižen epizodan udištadud variant  — [[3D-kino|3D-ladus]].
 
 {{stub}}
 
-[[Kategorii:Fil'mad kirjamišton mödhe]]
+[[Kategorii:Fil'mserijad]]
 [[Kategorii:Tähthasižed voinad|*]]
