--- a/Vell'_(fil'm).mw
+++ b/Vell'_(fil'm).mw
@@ -21,3 +21,4 @@ Režissör — [[Balabanov Aleksei|Aleksei Balabanov]].
 {{stub}}
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
+[[Kategorii:Venäman fil'mad]]
