*Empty MediaWiki Message*

--- a/Vell'_2.mw
+++ b/Vell'_2.mw
@@ -25,3 +25,4 @@ Režissör — [[Balabanov Aleksei|Aleksei Balabanov]].
 {{stub}}
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
+[[Kategorii:Venäman fil'mad]]
