*Empty MediaWiki Message*

--- a/Vepsän_zavet.mw
+++ b/Vepsän_zavet.mw
@@ -13,3 +13,4 @@ Režissörad — [[Studennikov Viktor|Viktor Studennikov]] i [[Aleksandr Tütrü
 
 [[Kategorii:Fil'mad Vepsänman polhe]]
 [[Kategorii:Fil'mad kirjamišton mödhe]]
+[[Kategorii:Venäman fil'mad]]
