*Empty MediaWiki Message*

--- a/Forsaž_1.mw
+++ b/Forsaž_1.mw
@@ -1,3 +1,6 @@
+'''«Forsaž 1»''' ([[anglijan kel'|angl.]]: ''The Fast and the Furious'', [[venäkel']]žes versijas — ''Форсаж 1'') om voden [[2001]] tetab amerikalaine [[torafil'm]]. Režissör — [[Koen Rob|Rob Koen]].
+
+Se om ezmäine [[Forsaž (fil'mserii)|Forsaž]]-fil'mfranšizan pala. Fil'm linni ani populärižeks kaiked mail'madme.
 {{stub}}
 {{Forsaž}}
 
