*Empty MediaWiki Message*

--- a/Latinan_frazoiden_nimikirjutez.mw
+++ b/Latinan_frazoiden_nimikirjutez.mw
@@ -67,7 +67,7 @@
 * '''Do ut des''' — «andan, miše andaižid»
 * '''Do ut facias''' — «andan, miše tegižid»
 * '''[[Dimidium animae meae]]''' — «minun hengen pol'»
-* '''Diurna manu nocturnaquae''' — «päiväl da öl»
+* '''Diurna manu nocturnaque''' — «päiväl da öl»
 * '''Divide et impera''' — «jaga i tobmoiče»
 * '''[[Dum spiro spero]]''' — «kuni hengin, toivon»
 
@@ -128,7 +128,7 @@
 * '''[[Sub rosa]]''' — «rozan al» ''(peitoiči)''
 
 === T ===
-* '''Te amo es merum''' — «armastan sindai — om toduz»
+* '''Te amo est verum''' — «armastan sindai — om toduz»
 
 === U ===
 * '''[[Ubi bene, ibi patria]]''' — «kus om hüva, sigä Kodima-ki om»
