*Empty MediaWiki Message*

--- a/Čikl.mw
+++ b/Čikl.mw
@@ -19,4 +19,5 @@ Külän eläjiden lugu oli 8 ristitud 2007-žes vodes. Istorižišti, se om [[Ve
 {{stub}}
 
 [[Kategorii:Venäman küläd]]
+[[Kategorii:Vepsän küläd]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
