--- a/Vepsän_küläd.mw
+++ b/Vepsän_küläd.mw
@@ -62,6 +62,10 @@ Se om eläbiden '''[[Vepsänma|vepsän küliden]] nimikirjutez''' regionoiden i 
 | ''Радогощь''
 | 372 (2007)
 |-
+| [[Čikl]]
+| ''Чикозеро''
+| 8 (2007)
+|-
 | [[Kall' (külä)|Kall']]
 | ''Щелейки''
 | 35 (2007)
