--- a/Gruzii.mw
+++ b/Gruzii.mw
@@ -11,7 +11,7 @@
 | align="center" width="140px" | 
 |}
 |-
-| align=center colspan=2 | [[Fail:Georgia (orthographic projection with inset).svg|300px]]
+| align=center colspan=2 | [[Fail:Georgia (orthographic--projection.svg|300px]]
 |}
 '''Gruzii''' (gruz.: საქართველო) om valdkund [[Evropa]]s. Sen pälidn om [[Tbilisi]].
 
