Eemaldatud muudatus 52635, mille tegi [[Special:Contributions/Giorgi Balakhadze|Giorgi Balakhadze]] ([[User talk:Giorgi Balakhadze|arutelu]]) maybe we also should write "georgian"?

--- a/Reprua.mw
+++ b/Reprua.mw
@@ -1,5 +1,5 @@
 [[Fail:RepruaRiver2.jpg|thumb|right|250px|Reprua]]
-'''Reprua''' ([[abhazijan kel'|abhaz.]]: ''Реҧруа''; gruz.: ''რეპრუა''; [[venäkel'|ven.]]: ''Репруа'') om pen' jogi [[Abhazii|Abhazijas]], [[Gruzii|Gruzijas]].
+'''Reprua''' ([[abhazijan kel'|abhaz.]]: ''Реҧруа'', [[venäkel'|ven.]]: ''Репруа'') om pen' jogi [[Abhazii|Abhazijas]].
 
 Se om kaikiš lühüdamb jogi mail'mas — sen piduz om vaiše 18 (!) metrad. Lankteb [[Mustmeri]]he.
 {{stub}}
