*Empty MediaWiki Message*

--- a/Timarcha_maritima.mw
+++ b/Timarcha_maritima.mw
@@ -1,4 +1,4 @@
-'''''Tumarcha maritima''''' om [[gaved']]. Kudamban avaiži da ümbrikirjuti vl. [[1850]] entomolog Perris. Necil gavedil ei ole völ nimid rahvahaližil kelil.
+'''''Tumarcha maritima''''' om [[gaved']], kudamban avaiži da ümbrikirjuti vl. [[1850]] entomolog Perris. Necil gavedil ei ole völ nimid rahvahaližil kelil.
 
 [[Francii|Francijan]] endemik.
 {{stub}}
