*Empty MediaWiki Message*

--- a/Klauvulin.mw
+++ b/Klauvulin.mw
@@ -6,4 +6,4 @@ Se avaiži da ümbrikirjuti vl. 1888 mikolog [[Šröter Jozef|Jozef Šröter]].
 
 [[Kategorii:Sened]]
 
-[[ru:Клавулина]]
+[[sv:Clavulina]]
