--- a/Heteropoda_shillongensis.mw
+++ b/Heteropoda_shillongensis.mw
@@ -1,7 +1,7 @@
-'''''Heteropoda shillongensis''''' om [[baukoi]], kudamban avaižiba da ümbrikirjutiba vl. [[1988]] arahnologad Seti da Tikader. Necil baukoil ei ole völ nimid rahvahaližil kelil.
+'''''Heteropoda shillongensis''''' om [[hämähouk]], kudamban avaižiba da ümbrikirjutiba vl. [[1988]] arahnologad Seti da Tikader. Necil baukoil ei ole völ nimid rahvahaližil kelil.
 
 [[Indii|Indijan]] endemik.
 {{stub}}
 
-[[Kategorii:Baukoid]]
+[[Kategorii:Hämähoukod]]
 [[Kategorii:Živatad kirjamišton mödhe]]
