*Empty MediaWiki Message*

--- a/Oker.mw
+++ b/Oker.mw
@@ -1,5 +1,5 @@
 [[Fail:SchunterMuendung.jpg|thumb|right|250px|Oker]]
-'''Tüterbah''' om jogi [[Saksanma]]s, [[Alasaksonii]]-federacijanmas. Om [[Aller]]-jogen päližajogi, [[Vezer]]-jogen basseinan pala. Jokseb [[Müden (Aller)|Müden]]-kommunan territorijadme.
+'''Oker''' om jogi [[Saksanma]]s, [[Alasaksonii]]-federacijanmas. Om [[Aller]]-jogen päližajogi, [[Vezer]]-jogen basseinan pala. Jokseb [[Müden (Aller)|Müden]]-kommunan territorijadme.
 
 Piduz om läz 105 kilometrad.
 {{stub}}
