/* Rürikan dinastii */ предварительно

--- a/Venälaižen_valdkundan_pämehed.mw
+++ b/Venälaižen_valdkundan_pämehed.mw
@@ -3,32 +3,36 @@ Se om '''Venälaižen valdkundan pämehiden''' nimikirjutez.
 
 == [[Rürikan dinastii]] ==
 # [[Rürik]] (862—879)
-# [[Oleg]] (879—912)
+# [[Oleg Endustai]] (879—912)
 # [[Igor' I]] (912—945)
-# [[Ol'ga]] (945—962)
-# [[Svätoslav]] (962—972)
+# [[Ol'ga Pühä]] (945—962)
+# [[Svätoslav Rohked]] (962—972)
 # [[Jaropolk I]] (972—978)
-# [[Vladimir I]] (978—1015)
-# [[Svätopolk I]] (1015—1019)
-# [[Jaroslav I]] (1019—1054)
-# [[Izäslav I]] (1054—1078)
+# [[Vladimir I Sur']] (978—1015)
+# [[Svätopolk I Soiverdud]] (1015—1019)
+# [[Jaroslav I Elonmelev]] (1019—1054)
+# [[Izäslav I]] (1054—1068, 1069—1073, 1076—1078)
+# [[Vseslav Noid]] (1068—1069)
+# [[Svätoslav II]] (1073—1076)
 # [[Vsevolod I]] (1078—1093)
 # [[Svätopolk II]] (1093—1113)
-# [[Vladimir II]] (1113—1125)
-# [[Mstislav I]] (1125—1131)
-# [[Jaropolk II]] (1131—1139)
+# [[Vladimir II Monomah]] (1113—1125)
+# [[Mstislav I Sur']] (1125—1132)
+# [[Jaropolk II]] (1132—1139)
+# [[Väčeslav I]] (1139, 1150, 1151—1154 [kut toižpämez' Izäslavanke II:nke])
 # [[Vsevolod II]] (1139—1146)
 # [[Igor' II]] (1146)
-# [[Izäslav II]] (1146—1149)
-# [[Jurii I]] (1149—1151, 1155—1157)
-# [[Izäslav III]] (1151—1154, 1157—1158)
-# [[Rostislav]] (1154—1155, 1159—1167)
-# [[Mstislav III]] (1158—1159, 1167—1169)
-# [[Andrei I]] (1169—1174)
-# [[Mihalko]] (1174—1176)
-# [[Vsevolod III]] (1176—1212)
+# [[Izäslav II]] (1146—1149, 1150, 1151—1154 [kut toižpämez' Väčeslavanke I:nke])
+# [[Jurii I Pit'kkäded]] (1149—1150, 1150—1151, 1155—1157)
+# [[Izäslav III]] (1155, 1157—1158, 1161)
+# [[Rostislav Mstislavič]] (1154—1155, 1159—1161, 1161—1167)
+# [[Mstislav II]] (1158—1159, 1167—1169)
+# [[Andrei I Bogolübovon]] (1169—1174)
+# [[Mihail Jur'jevič]] (1174, 1175—1176)
+# [[Jaropolk Rostislavič]] (1174—1175
+# [[Vsevolod III Sur' Peza]] (1176—1212)
 # [[Jurii II]] (1212—1216, 1218—1238)
-# [[Konsantin]] (1216—1218)
+# [[Konsantin Vsevolodovič]] (1216—1218)
 # [[Jaroslav II]] (1238—1246)
 # [[Svätoslav III]] (1246—1248)
 # [[Andrei II]] (1248—1252)
@@ -39,18 +43,18 @@ Se om '''Venälaižen valdkundan pämehiden''' nimikirjutez.
 # [[Andrei III]] (1281—1283, 1293—1304)
 # [[Mihail Jaroslavič]] (1304—1318)
 # [[Jurii III]] (1318—1322)
-# [[Dimitrii II]] (1322—1326)
-# [[Aleksandr Mihailovič]] (1326—1328)
-# [[Ivan I]] (1328—1341)
-# [[Simeon]] (1341—1353)
-# [[Ivan II]] (1353—1359)
-# [[Dmitrii I]] (1359—1389)
+# [[Dimitrii II Koirakahad Sil'mad]] (1322—1326)
+# [[Aleksandr Mihailovič]] (1326—1327)
+# [[Ivan I Rahanšaug]] (1327—1341)
+# [[Simeon Ülenpäine]] (1341—1353)
+# [[Ivan II Rusked]] (1353—1359)
+# [[Dmitrii I Donan]] (1359—1389)
 # [[Vasilii I]] (1389—1425)
-# [[Vasilii II]] (1425—1462)
-# [[Ivan III]] (1462—1505)
+# [[Vasilii II Pimed]] (1425—1462)
+# [[Ivan III Sur']] (1462—1505)
 # [[Vasilii III]] (1505—1533)
-# [[Ivan IV]] (1533—1584)
-# [[Födor I]] (1584—1598)
+# [[Ivan IV Äred]] (1533—1584)
+# [[Födor I Sor'mel Tehtud]] (1584—1598)
 
 == [[Smut|Smutan pord]] ==
 # [[Boris Godunov]] (1598—1605)
